# linkedin-cli

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: credentials.md  onboarding.md  pypi-publishing.md
docs/research/: skill-frontmatter-organization.md
src/linkedin_cli/: __init__.py  __main__.py  browser_profile.py  browser_session.py  cli.py  client.py  employment.py
tests/: test_browser_session.py  test_cli.py  test_client.py  test_employment.py
