[project]
name = "lkdn"
version = "0.1.4"
description = "Minimal CLI for publishing LinkedIn text posts with the Posts API"
readme = "README.md"
authors = [
    { name = "Breno Brito", email = "brenorb@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
]

[project.scripts]
licli = "linkedin_cli:main"
lkdn = "linkedin_cli:main"
linkedin = "linkedin_cli:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "linkedin_cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.52",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
